Colab: merge subtitles into video

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -42,7 +42,7 @@
       "source": [
         "#@title 1) git clone 项目\n",
         "# TODO: 改成你的仓库地址（私有仓库可用：https://<TOKEN>@github.com/<org>/<repo>.git）\n",
-        "REPO_URL = \"https://github.com/wujelly701/video-translation-service.git\"\n",
+        "REPO_URL = \"https://github.com/MAE5blog/video-translation-service.git\"\n",
         "BRANCH = \"main\"\n",
         "REPO_DIR = \"/content/video-translation-service\"\n",
         "\n",
@@ -63,9 +63,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 2) 安装系统依赖（ffmpeg）\n",
+        "#@title 2) 安装系统依赖（ffmpeg + 字体）\n",
         "!apt-get update -y\n",
-        "!apt-get install -y ffmpeg\n",
+        "!apt-get install -y ffmpeg fonts-noto-cjk\n",
         "!ffmpeg -version | head -n 2\n"
       ]
     },
@@ -255,6 +255,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "a651e91d",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -265,22 +266,99 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "b820f39a",
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 9) 下载生成的字幕文件\n",
-        "from google.colab import files\n",
+        "#@title 9) 合并字幕与视频（生成带字幕 MP4）\n",
+        "import subprocess\n",
+        "from pathlib import Path\n",
         "\n",
-        "files.download(\"1_zh.srt\")\n"
+        "VIDEO_PATH = Path(\"1.mp4\")\n",
+        "SRT_PATH = Path(\"1_zh.srt\")\n",
+        "MODE = \"hard\"  # hard=硬字幕(烧录)；soft=软字幕(可开关)\n",
+        "\n",
+        "if not VIDEO_PATH.exists():\n",
+        "    raise FileNotFoundError(VIDEO_PATH)\n",
+        "if not SRT_PATH.exists():\n",
+        "    raise FileNotFoundError(SRT_PATH)\n",
+        "\n",
+        "OUT_PATH = Path(\"1_zh_subbed.mp4\")\n",
+        "\n",
+        "if MODE == \"soft\":\n",
+        "    cmd = [\n",
+        "        \"ffmpeg\",\n",
+        "        \"-y\",\n",
+        "        \"-i\",\n",
+        "        str(VIDEO_PATH),\n",
+        "        \"-i\",\n",
+        "        str(SRT_PATH),\n",
+        "        \"-map\",\n",
+        "        \"0:v\",\n",
+        "        \"-map\",\n",
+        "        \"0:a?\",\n",
+        "        \"-map\",\n",
+        "        \"1:0\",\n",
+        "        \"-c:v\",\n",
+        "        \"copy\",\n",
+        "        \"-c:a\",\n",
+        "        \"copy\",\n",
+        "        \"-c:s\",\n",
+        "        \"mov_text\",\n",
+        "        str(OUT_PATH),\n",
+        "    ]\n",
+        "else:\n",
+        "    encoders = subprocess.check_output(\n",
+        "        [\"ffmpeg\", \"-hide_banner\", \"-encoders\"],\n",
+        "        text=True,\n",
+        "        stderr=subprocess.STDOUT,\n",
+        "    )\n",
+        "    use_nvenc = \"h264_nvenc\" in encoders\n",
+        "\n",
+        "    vf = \"subtitles=1_zh.srt:charenc=UTF-8:force_style='FontName=Noto Sans CJK SC,FontSize=24,Outline=1,Shadow=1'\"\n",
+        "    cmd = [\n",
+        "        \"ffmpeg\",\n",
+        "        \"-y\",\n",
+        "        \"-i\",\n",
+        "        str(VIDEO_PATH),\n",
+        "        \"-vf\",\n",
+        "        vf,\n",
+        "        \"-c:a\",\n",
+        "        \"copy\",\n",
+        "    ]\n",
+        "    if use_nvenc:\n",
+        "        cmd += [\"-c:v\", \"h264_nvenc\", \"-preset\", \"p4\", \"-cq\", \"19\"]\n",
+        "    else:\n",
+        "        cmd += [\"-c:v\", \"libx264\", \"-preset\", \"fast\", \"-crf\", \"19\"]\n",
+        "    cmd.append(str(OUT_PATH))\n",
+        "\n",
+        "print(\"Running:\\n \", \" \".join(cmd))\n",
+        "subprocess.run(cmd, check=True)\n",
+        "print(\"OK:\", OUT_PATH)\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "8be1c7b3",
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 10) （可选）停止服务\n",
+        "#@title 10) 下载生成的字幕 / 带字幕视频\n",
+        "from google.colab import files\n",
+        "\n",
+        "files.download(\"1_zh.srt\")\n",
+        "files.download(\"1_zh_subbed.mp4\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "46694e34",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title 11) （可选）停止服务\n",
         "import os\n",
         "import signal\n",
         "import pathlib\n",
