GPU: use Demucs on cuda + clear VRAM before tasks

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -113,6 +113,10 @@
         "use_gpu = true\n",
         "beam_size = 3\n",
         "\n",
+        "[GPU]\n",
+        "# 在 GPU 重任务前清理 CUDA 缓存，降低 OOM 概率（略慢）\n",
+        "clear_cuda_cache_before_tasks = true\n",
+        "\n",
         "[Translation]\n",
         "default_target_language = zh\n",
         "use_deepseek_polish = false\n",
@@ -121,8 +125,8 @@
         "# 人声分离（Demucs）：改善背景音乐/嘈杂场景识别\n",
         "enable_vocal_separation = true\n",
         "vocal_separation_model = htdemucs\n",
-        "# 建议先用 cpu，避免与服务端模型争抢显存导致 OOM\n",
-        "vocal_separation_device = cpu\n",
+        "# 默认用 cuda 加速；如遇 OOM 可改为 cpu\n",
+        "vocal_separation_device = cuda\n",
         "\"\"\"\n",
         "\n",
         "Path(\"config.ini\").write_text(config_text, encoding=\"utf-8\")\n",
