Colab: install libsndfile1 for Demucs

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -65,7 +65,7 @@
       "source": [
         "#@title 2) 安装系统依赖（ffmpeg + 字体）\n",
         "!apt-get update -y\n",
-        "!apt-get install -y ffmpeg fonts-noto-cjk\n",
+        "!apt-get install -y ffmpeg fonts-noto-cjk libsndfile1\n",
         "!ffmpeg -version | head -n 2\n"
       ]
     },
