Colab: download test video via direct link

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -2,11 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "f3dd3480",
       "metadata": {},
       "source": [
         "# video-translation-service（Colab + T4 GPU）一键安装运行\n",
         "\n",
-        "目标：上传 `1.mp4` → 生成中文字幕 `1_zh.srt`（不启用润色）。\n",
+        "目标：从直链下载 `1.mp4` → 生成中文字幕 `1_zh.srt`（不启用润色）。\n",
         "\n",
         "注意：首次运行会下载 Whisper + 翻译模型（可能几 GB），需要等待一段时间。"
       ]
@@ -241,19 +242,50 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 7) 上传测试视频（请上传 1.mp4）\n",
-        "from google.colab import files\n",
+        "#@title 7) 下载测试视频（自动保存为 1.mp4）\n",
+        "# 直接把你的直链贴到这里即可\n",
+        "VIDEO_URL = \"https://oplist.mae5.com/d/本地存储/1.mp4?sign=b58L3c5JYGAMNwLcO09asS9CV8aHTlGBXiO3Yi8Pe0Y=:0\"\n",
+        "OUT_PATH = \"1.mp4\"\n",
+        "FORCE = False  # True=总是重新下载\n",
         "\n",
-        "uploaded = files.upload()\n",
-        "print(\"uploaded:\", list(uploaded.keys()))\n",
+        "import urllib.parse\n",
+        "from pathlib import Path\n",
         "\n",
-        "# 如果你上传的文件名不是 1.mp4，但只上传了1个文件，则自动重命名\n",
-        "import os\n",
+        "import requests\n",
         "\n",
-        "if \"1.mp4\" not in uploaded and len(uploaded) == 1:\n",
-        "    src = list(uploaded.keys())[0]\n",
-        "    os.rename(src, \"1.mp4\")\n",
-        "    print(\"renamed:\", src, \"-> 1.mp4\")\n"
+        "try:\n",
+        "    from tqdm.auto import tqdm\n",
+        "except Exception:\n",
+        "    tqdm = None\n",
+        "\n",
+        "def normalize_url(url: str) -> str:\n",
+        "    parts = urllib.parse.urlsplit(url)\n",
+        "    # 对 path 做编码，避免包含中文路径时部分工具报错\n",
+        "    path = urllib.parse.quote(parts.path)\n",
+        "    return urllib.parse.urlunsplit((parts.scheme, parts.netloc, path, parts.query, parts.fragment))\n",
+        "\n",
+        "out = Path(OUT_PATH)\n",
+        "if out.exists() and out.stat().st_size > 0 and not FORCE:\n",
+        "    print(\"exists:\", out, out.stat().st_size)\n",
+        "else:\n",
+        "    url = normalize_url(VIDEO_URL)\n",
+        "    with requests.get(url, stream=True, timeout=60) as r:\n",
+        "        r.raise_for_status()\n",
+        "        total = int(r.headers.get(\"content-length\") or 0)\n",
+        "        if tqdm and total > 0:\n",
+        "            pbar = tqdm(total=total, unit=\"B\", unit_scale=True, desc=\"download\")\n",
+        "        else:\n",
+        "            pbar = None\n",
+        "        with open(out, \"wb\") as f:\n",
+        "            for chunk in r.iter_content(chunk_size=1024 * 1024):\n",
+        "                if not chunk:\n",
+        "                    continue\n",
+        "                f.write(chunk)\n",
+        "                if pbar:\n",
+        "                    pbar.update(len(chunk))\n",
+        "        if pbar:\n",
+        "            pbar.close()\n",
+        "    print(\"downloaded:\", out, out.stat().st_size)\n"
       ]
     },
     {
