Debug: show /transcribe error body; allow Colab force-restart server.log

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -145,13 +145,17 @@
       "outputs": [],
       "source": [
         "#@title 5) 后台启动服务（不占用单元格）\n",
+        "import os\n",
         "import pathlib\n",
+        "import signal\n",
         "import subprocess\n",
         "import sys\n",
+        "import time\n",
         "\n",
         "import requests\n",
         "\n",
         "SERVICE_URL = \"http://127.0.0.1:50515\"\n",
+        "FORCE_RESTART = False  # True=重启服务并生成 server.log（用于排查 500）\n",
         "\n",
         "def health():\n",
         "    try:\n",
@@ -159,7 +163,26 @@
         "    except Exception:\n",
         "        return None\n",
         "\n",
+        "def stop_running_server():\n",
+        "    pid_path = pathlib.Path(\"server.pid\")\n",
+        "    if pid_path.exists():\n",
+        "        try:\n",
+        "            pid = int(pid_path.read_text().strip())\n",
+        "            os.kill(pid, signal.SIGTERM)\n",
+        "            print(\"killed by server.pid:\", pid)\n",
+        "        except Exception as e:\n",
+        "            print(\"failed to kill by server.pid:\", e)\n",
+        "\n",
+        "    # 兜底：按端口杀（Colab/Linux）\n",
+        "    subprocess.run([\"bash\", \"-lc\", \"fuser -k 50515/tcp || true\"], check=False)\n",
+        "\n",
         "h = health()\n",
+        "if h and FORCE_RESTART:\n",
+        "    print(\"force restart: stopping existing server ...\")\n",
+        "    stop_running_server()\n",
+        "    time.sleep(2)\n",
+        "    h = health()\n",
+        "\n",
         "if not h:\n",
         "    p = subprocess.Popen(\n",
         "        [sys.executable, \"server_optimized.py\"],\n",
@@ -170,7 +193,9 @@
         "    pathlib.Path(\"server.pid\").write_text(str(p.pid))\n",
         "    print(\"server started, pid:\", p.pid)\n",
         "else:\n",
-        "    print(\"server already running:\", h)\n"
+        "    print(\"server already running:\", h)\n",
+        "    if not pathlib.Path(\"server.log\").exists():\n",
+        "        print(\"NOTE: 未找到 server.log；如需抓取服务端报错，请将 FORCE_RESTART=True 再运行本单元格。\")\n"
       ]
     },
     {
