Colab: optional server traceback for 500

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -156,6 +156,7 @@
         "\n",
         "SERVICE_URL = \"http://127.0.0.1:50515\"\n",
         "FORCE_RESTART = False  # True=重启服务并生成 server.log（用于排查 500）\n",
+        "RETURN_TRACEBACK = False  # True=服务端 500 时返回 JSON traceback（更容易定位问题）\n",
         "\n",
         "def health():\n",
         "    try:\n",
@@ -184,11 +185,15 @@
         "    h = health()\n",
         "\n",
         "if not h:\n",
+        "    env = os.environ.copy()\n",
+        "    if RETURN_TRACEBACK:\n",
+        "        env[\"VTS_RETURN_TRACEBACK\"] = \"1\"\n",
         "    p = subprocess.Popen(\n",
         "        [sys.executable, \"server_optimized.py\"],\n",
         "        stdout=open(\"server.log\", \"wb\"),\n",
         "        stderr=subprocess.STDOUT,\n",
         "        start_new_session=True,\n",
+        "        env=env,\n",
         "    )\n",
         "    pathlib.Path(\"server.pid\").write_text(str(p.pid))\n",
         "    print(\"server started, pid:\", p.pid)\n",
