ASR: 分块识别进度条

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -109,10 +109,10 @@
         "\n",
         "[Models]\n",
         "# 如果显存不够/加载太慢，可改：asr_model_size = small\n",
-        "asr_model_size = medium\n",
+        "asr_model_size = large-v3\n",
         "\n",
         "# T4 显存有限，默认使用 600M（更稳）；追求质量可改为 1.3B\n",
-        "translation_model = facebook/nllb-200-distilled-600M\n",
+        "translation_model = facebook/nllb-200-distilled-1.3B\n",
         "\n",
         "use_gpu = true\n",
         "beam_size = 3\n",
@@ -120,6 +120,12 @@
         "[GPU]\n",
         "# 在 GPU 重任务前清理 CUDA 缓存，降低 OOM 概率（略慢）\n",
         "clear_cuda_cache_before_tasks = true\n",
+        "\n",
+        "[ASR]\n",
+        "# 分块识别：显示进度条，也可降低长音频导致的 500/OOM\n",
+        "chunk_sec = 300\n",
+        "# 重叠一点点，避免切在单词中间（会产生少量重复，程序会尽量去重）\n",
+        "chunk_overlap_sec = 0.5\n",
         "\n",
         "[Translation]\n",
         "default_target_language = zh\n",
