Colab: ASR 分块开关默认关闭

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -100,7 +100,12 @@
         "#@title 4) 生成 config.ini（GPU + 中文 + 不润色）\n",
         "from pathlib import Path\n",
         "\n",
-        "config_text = \"\"\"[API]\n",
+        "# 分块识别开关（默认关闭）\n",
+        "ENABLE_ASR_CHUNKING = False  # True=分块识别（显示进度条/降低长音频500/OOM）\n",
+        "ASR_CHUNK_SEC = 300\n",
+        "ASR_CHUNK_OVERLAP_SEC = 0.5\n",
+        "\n",
+        "config_text = f\"\"\"[API]\n",
         "deepseek_api_key =\n",
         "\n",
         "[Service]\n",
@@ -123,9 +128,9 @@
         "\n",
         "[ASR]\n",
         "# 分块识别：显示进度条，也可降低长音频导致的 500/OOM\n",
-        "chunk_sec = 300\n",
+        "chunk_sec = {ASR_CHUNK_SEC if ENABLE_ASR_CHUNKING else 0}\n",
         "# 重叠一点点，避免切在单词中间（会产生少量重复，程序会尽量去重）\n",
-        "chunk_overlap_sec = 0.5\n",
+        "chunk_overlap_sec = {ASR_CHUNK_OVERLAP_SEC}\n",
         "\n",
         "[Translation]\n",
         "default_target_language = zh\n",
