Colab: 按需加载/卸载 ASR 与翻译模型

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -111,10 +111,13 @@
         "[Service]\n",
         "host = 127.0.0.1\n",
         "port = 50515\n",
+        "lazy_load_models = true\n",
+        "manage_models = true\n",
+        "unload_models_after_tasks = true\n",
         "\n",
         "[Models]\n",
         "# 如果显存不够/加载太慢，可改：asr_model_size = small\n",
-        "asr_model_size = large-v3\n",
+        "asr_model_size = large-v2\n",
         "\n",
         "# T4 显存有限，默认使用 600M（更稳）；追求质量可改为 1.3B\n",
         "translation_model = facebook/nllb-200-distilled-1.3B\n",
@@ -221,7 +224,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 6) 等待模型加载完成（首次运行需要等待）\n",
+        "#@title 6) 等待服务启动（模型按需加载）\n",
         "import json\n",
         "import os\n",
         "import time\n",
@@ -267,8 +270,10 @@
         "        time.sleep(2)\n",
         "        continue\n",
         "\n",
-        "    if h.get(\"ready\"):\n",
-        "        print(\"READY:\\n\", json.dumps(h, ensure_ascii=False, indent=2))\n",
+        "    if h.get(\"status\") == \"ok\":\n",
+        "        print(\"HEALTH:\\n\", json.dumps(h, ensure_ascii=False, indent=2))\n",
+        "        if not h.get(\"ready\"):\n",
+        "            print(\"NOTE: 未预加载模型，将在 ASR/翻译前按需加载。\")\n",
         "        break\n",
         "    if i % 5 == 0:\n",
         "        print(f\"{i*2:>4}s\", h.get(\"phase\"), h.get(\"progress\"), h.get(\"message\"))\n",
