Colab: 优化字幕合并体积与清晰度

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -355,13 +355,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 9) 合并字幕与视频（生成带字幕 MP4）\n",
+        "#@title 9) 合并字幕与视频（生成带字幕视频）\n",
+        "import json\n",
         "import subprocess\n",
         "from pathlib import Path\n",
         "\n",
         "VIDEO_PATH = Path(\"1.mp4\")\n",
         "SRT_PATH = Path(\"1_zh.srt\")\n",
-        "MODE = \"hard\"  # hard=硬字幕(烧录)；soft=软字幕(可开关)\n",
+        "\n",
+        "# soft：内封字幕（不转码，大小≈原视频；字幕清晰，推荐）\n",
+        "# hard：硬字幕烧录（需要重编码；若原视频分辨率低，字幕会随视频一起被放大而显得不如外挂字幕清晰）\n",
+        "MODE = \"soft\"  # soft / hard\n",
         "\n",
         "if not VIDEO_PATH.exists():\n",
         "    raise FileNotFoundError(VIDEO_PATH)\n",
@@ -370,7 +374,26 @@
         "\n",
         "OUT_PATH = Path(\"1_zh_subbed.mp4\")\n",
         "\n",
+        "def ffprobe_json(path: Path) -> dict:\n",
+        "    out = subprocess.check_output(\n",
+        "        [\n",
+        "            \"ffprobe\",\n",
+        "            \"-v\",\n",
+        "            \"error\",\n",
+        "            \"-show_entries\",\n",
+        "            \"format=duration,size,bit_rate\",\n",
+        "            \"-show_entries\",\n",
+        "            \"stream=codec_type,codec_name,width,height,bit_rate\",\n",
+        "            \"-of\",\n",
+        "            \"json\",\n",
+        "            str(path),\n",
+        "        ],\n",
+        "        text=True,\n",
+        "    )\n",
+        "    return json.loads(out)\n",
+        "\n",
         "if MODE == \"soft\":\n",
+        "    # 内封字幕：不重编码，文件大小基本不变（推荐）\n",
         "    cmd = [\n",
         "        \"ffmpeg\",\n",
         "        \"-y\",\n",
@@ -390,9 +413,55 @@
         "        \"copy\",\n",
         "        \"-c:s\",\n",
         "        \"mov_text\",\n",
+        "        \"-metadata:s:s:0\",\n",
+        "        \"language=chi\",\n",
+        "        \"-metadata:s:s:0\",\n",
+        "        \"title=Chinese\",\n",
+        "        \"-disposition:s:0\",\n",
+        "        \"default\",\n",
+        "        \"-movflags\",\n",
+        "        \"+faststart\",\n",
         "        str(OUT_PATH),\n",
         "    ]\n",
         "else:\n",
+        "    # 硬字幕：会重编码；为了让体积接近原视频，按原视频码率做 ABR（并略加一点给字幕边缘）\n",
+        "    info = ffprobe_json(VIDEO_PATH)\n",
+        "    height = None\n",
+        "    v_bitrate = None\n",
+        "    for st in info.get(\"streams\", []) or []:\n",
+        "        if st.get(\"codec_type\") == \"video\":\n",
+        "            height = st.get(\"height\")\n",
+        "            try:\n",
+        "                v_bitrate = int(st.get(\"bit_rate\")) if st.get(\"bit_rate\") else None\n",
+        "            except Exception:\n",
+        "                v_bitrate = None\n",
+        "            break\n",
+        "    try:\n",
+        "        duration = float((info.get(\"format\", {}) or {}).get(\"duration\") or 0)\n",
+        "    except Exception:\n",
+        "        duration = 0.0\n",
+        "    try:\n",
+        "        size = int((info.get(\"format\", {}) or {}).get(\"size\") or 0)\n",
+        "    except Exception:\n",
+        "        size = 0\n",
+        "    if not v_bitrate and duration > 0 and size > 0:\n",
+        "        v_bitrate = int(size * 8 / duration)  # 退化估算（包含音频，足够用来控体积）\n",
+        "    target_k = int((v_bitrate or 800_000) / 1000 * 1.15)  # 给字幕边缘留一点余量\n",
+        "\n",
+        "    if not height:\n",
+        "        height = 720\n",
+        "    font_size = min(60, max(24, int(height * 0.06)))\n",
+        "    outline = max(2, int(font_size / 16))\n",
+        "    margin_v = max(20, int(font_size * 1.2))\n",
+        "\n",
+        "    style = (\n",
+        "        f\"FontName=Noto Sans CJK SC,\"\n",
+        "        f\"FontSize={font_size},Bold=1,\"\n",
+        "        f\"Outline={outline},Shadow=0,\"\n",
+        "        f\"MarginV={margin_v},Alignment=2\"\n",
+        "    )\n",
+        "    vf = f\"subtitles={SRT_PATH.as_posix()}:charenc=UTF-8:fontsdir=/usr/share/fonts:force_style='{style}'\"\n",
+        "\n",
         "    encoders = subprocess.check_output(\n",
         "        [\"ffmpeg\", \"-hide_banner\", \"-encoders\"],\n",
         "        text=True,\n",
@@ -400,7 +469,6 @@
         "    )\n",
         "    use_nvenc = \"h264_nvenc\" in encoders\n",
         "\n",
-        "    vf = \"subtitles=1_zh.srt:charenc=UTF-8:force_style='FontName=Noto Sans CJK SC,FontSize=24,Outline=1,Shadow=1'\"\n",
         "    cmd = [\n",
         "        \"ffmpeg\",\n",
         "        \"-y\",\n",
@@ -410,11 +478,39 @@
         "        vf,\n",
         "        \"-c:a\",\n",
         "        \"copy\",\n",
+        "        \"-movflags\",\n",
+        "        \"+faststart\",\n",
         "    ]\n",
         "    if use_nvenc:\n",
-        "        cmd += [\"-c:v\", \"h264_nvenc\", \"-preset\", \"p4\", \"-cq\", \"19\"]\n",
+        "        cmd += [\n",
+        "            \"-c:v\",\n",
+        "            \"h264_nvenc\",\n",
+        "            \"-preset\",\n",
+        "            \"p7\",\n",
+        "            \"-rc\",\n",
+        "            \"vbr_hq\",\n",
+        "            \"-b:v\",\n",
+        "            f\"{target_k}k\",\n",
+        "            \"-maxrate\",\n",
+        "            f\"{int(target_k * 1.5)}k\",\n",
+        "            \"-bufsize\",\n",
+        "            f\"{int(target_k * 2)}k\",\n",
+        "        ]\n",
         "    else:\n",
-        "        cmd += [\"-c:v\", \"libx264\", \"-preset\", \"fast\", \"-crf\", \"19\"]\n",
+        "        cmd += [\n",
+        "            \"-c:v\",\n",
+        "            \"libx264\",\n",
+        "            \"-preset\",\n",
+        "            \"slow\",\n",
+        "            \"-b:v\",\n",
+        "            f\"{target_k}k\",\n",
+        "            \"-maxrate\",\n",
+        "            f\"{int(target_k * 1.5)}k\",\n",
+        "            \"-bufsize\",\n",
+        "            f\"{int(target_k * 2)}k\",\n",
+        "            \"-pix_fmt\",\n",
+        "            \"yuv420p\",\n",
+        "        ]\n",
         "    cmd.append(str(OUT_PATH))\n",
         "\n",
         "print(\"Running:\\n \", \" \".join(cmd))\n",
