--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -105,6 +105,10 @@
         "ASR_CHUNK_SEC = 300\n",
         "ASR_CHUNK_OVERLAP_SEC = 0.5\n",
         "\n",
+        "# 指定 ASR 音频语言（auto=自动检测；填错会变差）\n",
+        "# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar\n",
+        "ASR_LANGUAGE = \"auto\"\n",
+        "\n",
         "config_text = f\"\"\"[API]\n",
         "deepseek_api_key =\n",
         "\n",
@@ -130,6 +134,9 @@
         "clear_cuda_cache_before_tasks = true\n",
         "\n",
         "[ASR]\n",
+        "# 指定音频语言（可提升嘈杂场景稳定性；填错会变差）\n",
+        "language = {ASR_LANGUAGE}\n",
+        "\n",
         "# 分块识别：显示进度条，也可降低长音频导致的 500/OOM\n",
         "chunk_sec = {ASR_CHUNK_SEC if ENABLE_ASR_CHUNKING else 0}\n",
         "# 重叠一点点，避免切在单词中间（会产生少量重复，程序会尽量去重）\n",
