--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -532,7 +532,99 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 10) 下载生成的字幕 / 带字幕视频\n",
+        "#@title 10) 上传到 OpenList/AList（可选） + 下载文件\n",
+        "import json\n",
+        "import os\n",
+        "from pathlib import Path\n",
+        "from urllib.parse import quote\n",
+        "\n",
+        "import requests\n",
+        "\n",
+        "# ====== OpenList/AList 上传配置（按需填写）======\n",
+        "UPLOAD_TO_OPENLIST = False  # True=上传；False=跳过\n",
+        "OPENLIST_BASE_URL = os.getenv(\"OPENLIST_BASE_URL\", \"\").rstrip(\"/\")  # 例如 https://alist.example.com\n",
+        "OPENLIST_USERNAME = os.getenv(\"OPENLIST_USERNAME\", \"\")\n",
+        "OPENLIST_PASSWORD = os.getenv(\"OPENLIST_PASSWORD\", \"\")\n",
+        "REMOTE_DIR = os.getenv(\"OPENLIST_REMOTE_DIR\", \"/\")  # 例如 /tianyi/test3\n",
+        "REMOTE_FILENAME = os.getenv(\"OPENLIST_REMOTE_NAME\", \"1_zh_subbed.mp4\")\n",
+        "VERIFY_TLS = True  # https 自签证书可设 False\n",
+        "\n",
+        "LOCAL_FILE = Path(\"1_zh_subbed.mp4\")\n",
+        "\n",
+        "def alist_login(base_url: str, username: str, password: str) -> str:\n",
+        "    url = f\"{base_url}/api/auth/login\"\n",
+        "    # 兼容不同参数名：先按博客（Username/Password），失败再试小写\n",
+        "    last = None\n",
+        "    for payload in (\n",
+        "        {\"Username\": username, \"Password\": password},\n",
+        "        {\"username\": username, \"password\": password},\n",
+        "    ):\n",
+        "        r = requests.post(url, data=payload, timeout=30, verify=VERIFY_TLS)\n",
+        "        r.raise_for_status()\n",
+        "        last = r.json()\n",
+        "        if last.get(\"code\") == 200 and isinstance(last.get(\"data\"), dict) and last[\"data\"].get(\"token\"):\n",
+        "            return last[\"data\"][\"token\"]\n",
+        "    raise RuntimeError(f\"login failed: {last}\")\n",
+        "\n",
+        "def alist_mkdir(base_url: str, token: str, path: str):\n",
+        "    url = f\"{base_url}/api/fs/mkdir\"\n",
+        "    headers = {\"Authorization\": token}\n",
+        "    r = requests.post(url, headers=headers, data={\"path\": path}, timeout=30, verify=VERIFY_TLS)\n",
+        "    # 目录已存在时通常返回非200或 code!=200，这里不强制失败\n",
+        "    try:\n",
+        "        return r.json()\n",
+        "    except Exception:\n",
+        "        return None\n",
+        "\n",
+        "def alist_upload_file(base_url: str, token: str, local_path: Path, remote_dir: str, remote_name: str):\n",
+        "    url = f\"{base_url}/api/fs/form\"\n",
+        "    remote_dir = remote_dir if str(remote_dir).startswith(\"/\") else \"/\" + str(remote_dir)\n",
+        "    remote_path = remote_dir.rstrip(\"/\") + \"/\" + remote_name\n",
+        "    file_path_header = quote(remote_path, safe=\"/\")  # URL 编码（保留/）\n",
+        "    headers = {\n",
+        "        \"Authorization\": token,\n",
+        "        \"file-path\": file_path_header,\n",
+        "        \"Content-Length\": str(local_path.stat().st_size),\n",
+        "    }\n",
+        "\n",
+        "    def _do_put(hdrs: dict):\n",
+        "        with local_path.open(\"rb\") as f:\n",
+        "            files = {\"file\": (remote_name, f)}\n",
+        "            return requests.put(url, headers=hdrs, files=files, timeout=3600, verify=VERIFY_TLS)\n",
+        "\n",
+        "    r = _do_put(headers)\n",
+        "    if r.status_code in (401, 403) and not str(headers.get(\"Authorization\", \"\")).lower().startswith(\"bearer \"):\n",
+        "        headers2 = dict(headers)\n",
+        "        headers2[\"Authorization\"] = f\"Bearer {token}\"\n",
+        "        r = _do_put(headers2)\n",
+        "\n",
+        "    r.raise_for_status()\n",
+        "    j = r.json()\n",
+        "    if j.get(\"code\") != 200:\n",
+        "        raise RuntimeError(f\"upload failed: {j}\")\n",
+        "    return j\n",
+        "\n",
+        "if UPLOAD_TO_OPENLIST:\n",
+        "    if not OPENLIST_BASE_URL:\n",
+        "        raise ValueError(\"OPENLIST_BASE_URL is empty\")\n",
+        "    if not OPENLIST_USERNAME or not OPENLIST_PASSWORD:\n",
+        "        raise ValueError(\"OPENLIST_USERNAME/OPENLIST_PASSWORD is empty\")\n",
+        "    if not LOCAL_FILE.exists():\n",
+        "        raise FileNotFoundError(LOCAL_FILE)\n",
+        "\n",
+        "    print(\"login ...\")\n",
+        "    token = alist_login(OPENLIST_BASE_URL, OPENLIST_USERNAME, OPENLIST_PASSWORD)\n",
+        "    print(\"token ok\")\n",
+        "\n",
+        "    if REMOTE_DIR and REMOTE_DIR != \"/\":\n",
+        "        print(\"mkdir ...\", REMOTE_DIR)\n",
+        "        alist_mkdir(OPENLIST_BASE_URL, token, REMOTE_DIR)\n",
+        "\n",
+        "    print(\"upload ...\", LOCAL_FILE, \"->\", REMOTE_DIR, REMOTE_FILENAME)\n",
+        "    res = alist_upload_file(OPENLIST_BASE_URL, token, LOCAL_FILE, REMOTE_DIR, REMOTE_FILENAME)\n",
+        "    print(\"upload ok:\", json.dumps(res, ensure_ascii=False))\n",
+        "\n",
+        "# ====== 下载到本地（Colab）======\n",
         "from google.colab import files\n",
         "\n",
         "files.download(\"1_zh.srt\")\n",
