Colab: 使用下载文件名贯穿流程

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -298,10 +298,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 7) 下载测试视频（自动保存为 1.mp4）\n",
+        "#@title 7) 下载测试视频（自动使用链接文件名）\n",
         "# 直接把你的直链贴到这里即可\n",
         "VIDEO_URL = \"https://oplist.mae5.com/d/本地存储/1.mp4?sign=b58L3c5JYGAMNwLcO09asS9CV8aHTlGBXiO3Yi8Pe0Y=:0\"\n",
-        "OUT_PATH = \"1.mp4\"\n",
+        "OUT_PATH = \"\"  # 留空=使用链接里的文件名\n",
         "FORCE = False  # True=总是重新下载\n",
         "\n",
         "import urllib.parse\n",
@@ -314,13 +314,28 @@
         "except Exception:\n",
         "    tqdm = None\n",
         "\n",
+        "def guess_filename(url: str) -> str:\n",
+        "    parts = urllib.parse.urlsplit(url)\n",
+        "    name = Path(urllib.parse.unquote(parts.path)).name\n",
+        "    if not name:\n",
+        "        q = urllib.parse.parse_qs(parts.query or \"\")\n",
+        "        for key in (\"filename\", \"file\", \"name\"):\n",
+        "            if q.get(key):\n",
+        "                name = q[key][0]\n",
+        "                break\n",
+        "    if not name:\n",
+        "        name = \"video.mp4\"\n",
+        "    return name\n",
+        "\n",
         "def normalize_url(url: str) -> str:\n",
         "    parts = urllib.parse.urlsplit(url)\n",
         "    # 对 path 做编码，避免包含中文路径时部分工具报错\n",
         "    path = urllib.parse.quote(parts.path)\n",
         "    return urllib.parse.urlunsplit((parts.scheme, parts.netloc, path, parts.query, parts.fragment))\n",
         "\n",
-        "out = Path(OUT_PATH)\n",
+        "out = Path(OUT_PATH) if OUT_PATH else Path(guess_filename(VIDEO_URL))\n",
+        "VIDEO_FILE = str(out)  # 给后续单元格使用\n",
+        "print(\"save as:\", out)\n",
         "if out.exists() and out.stat().st_size > 0 and not FORCE:\n",
         "    print(\"exists:\", out, out.stat().st_size)\n",
         "else:\n",
@@ -352,7 +367,16 @@
       "outputs": [],
       "source": [
         "#@title 8) 翻译生成中文字幕（不润色）\n",
-        "!python batch_translate.py 1.mp4 -t zh --translation-only\n"
+        "from pathlib import Path\n",
+        "\n",
+        "TARGET_LANG = \"zh\"\n",
+        "VIDEO_PATH = Path(globals().get(\"VIDEO_FILE\", \"1.mp4\"))\n",
+        "print(\"video:\", VIDEO_PATH)\n",
+        "\n",
+        "!python batch_translate.py \"{VIDEO_PATH}\" -t {TARGET_LANG} --translation-only\n",
+        "\n",
+        "SRT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.srt\")\n",
+        "print(\"srt:\", SRT_PATH)\n"
       ]
     },
     {
@@ -367,8 +391,9 @@
         "import subprocess\n",
         "from pathlib import Path\n",
         "\n",
-        "VIDEO_PATH = Path(\"1.mp4\")\n",
-        "SRT_PATH = Path(\"1_zh.srt\")\n",
+        "VIDEO_PATH = Path(globals().get(\"VIDEO_FILE\", \"1.mp4\"))\n",
+        "TARGET_LANG = globals().get(\"TARGET_LANG\", \"zh\")\n",
+        "SRT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.srt\")\n",
         "\n",
         "# soft：内封字幕（不转码，大小≈原视频；字幕清晰，推荐）\n",
         "# hard：硬字幕烧录（需要重编码；若原视频分辨率低，字幕会随视频一起被放大而显得不如外挂字幕清晰）\n",
@@ -379,7 +404,7 @@
         "if not SRT_PATH.exists():\n",
         "    raise FileNotFoundError(SRT_PATH)\n",
         "\n",
-        "OUT_PATH = Path(\"1_zh_subbed.mp4\")\n",
+        "OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
         "\n",
         "def ffprobe_json(path: Path) -> dict:\n",
         "    out = subprocess.check_output(\n",
@@ -540,16 +565,22 @@
         "\n",
         "import requests\n",
         "\n",
+        "# ====== 本地文件（由前面步骤生成）======\n",
+        "VIDEO_PATH = Path(globals().get(\"VIDEO_FILE\", \"1.mp4\"))\n",
+        "TARGET_LANG = globals().get(\"TARGET_LANG\", \"zh\")\n",
+        "SRT_FILE = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.srt\")\n",
+        "LOCAL_FILE = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
+        "print(\"local srt:\", SRT_FILE)\n",
+        "print(\"local video:\", LOCAL_FILE)\n",
+        "\n",
         "# ====== OpenList/AList 上传配置（按需填写）======\n",
         "UPLOAD_TO_OPENLIST = False  # True=上传；False=跳过\n",
         "OPENLIST_BASE_URL = os.getenv(\"OPENLIST_BASE_URL\", \"\").rstrip(\"/\")  # 例如 https://alist.example.com\n",
         "OPENLIST_USERNAME = os.getenv(\"OPENLIST_USERNAME\", \"\")\n",
         "OPENLIST_PASSWORD = os.getenv(\"OPENLIST_PASSWORD\", \"\")\n",
         "REMOTE_DIR = os.getenv(\"OPENLIST_REMOTE_DIR\", \"/\")  # 例如 /tianyi/test3\n",
-        "REMOTE_FILENAME = os.getenv(\"OPENLIST_REMOTE_NAME\", \"1_zh_subbed.mp4\")\n",
+        "REMOTE_FILENAME = os.getenv(\"OPENLIST_REMOTE_NAME\", LOCAL_FILE.name)\n",
         "VERIFY_TLS = True  # https 自签证书可设 False\n",
-        "\n",
-        "LOCAL_FILE = Path(\"1_zh_subbed.mp4\")\n",
         "\n",
         "def alist_login(base_url: str, username: str, password: str) -> str:\n",
         "    url = f\"{base_url}/api/auth/login\"\n",
@@ -584,7 +615,6 @@
         "    headers = {\n",
         "        \"Authorization\": token,\n",
         "        \"file-path\": file_path_header,\n",
-        "        \"Content-Length\": str(local_path.stat().st_size),\n",
         "    }\n",
         "\n",
         "    def _do_put(hdrs: dict):\n",
@@ -627,8 +657,8 @@
         "# ====== 下载到本地（Colab）======\n",
         "from google.colab import files\n",
         "\n",
-        "files.download(\"1_zh.srt\")\n",
-        "files.download(\"1_zh_subbed.mp4\")\n"
+        "files.download(str(SRT_FILE))\n",
+        "files.download(str(LOCAL_FILE))\n"
       ]
     },
     {
