Colab: OpenList 上传参数改为硬编码

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -559,7 +559,6 @@
       "source": [
         "#@title 10) 上传到 OpenList/AList（可选） + 下载文件\n",
         "import json\n",
-        "import os\n",
         "from pathlib import Path\n",
         "from urllib.parse import quote\n",
         "\n",
@@ -573,13 +572,13 @@
         "print(\"local srt:\", SRT_FILE)\n",
         "print(\"local video:\", LOCAL_FILE)\n",
         "\n",
-        "# ====== OpenList/AList 上传配置（按需填写）======\n",
+        "# ====== OpenList/AList 上传配置（硬编码）======\n",
         "UPLOAD_TO_OPENLIST = False  # True=上传；False=跳过\n",
-        "OPENLIST_BASE_URL = os.getenv(\"OPENLIST_BASE_URL\", \"\").rstrip(\"/\")  # 例如 https://alist.example.com\n",
-        "OPENLIST_USERNAME = os.getenv(\"OPENLIST_USERNAME\", \"\")\n",
-        "OPENLIST_PASSWORD = os.getenv(\"OPENLIST_PASSWORD\", \"\")\n",
-        "REMOTE_DIR = os.getenv(\"OPENLIST_REMOTE_DIR\", \"/\")  # 例如 /tianyi/test3\n",
-        "REMOTE_FILENAME = os.getenv(\"OPENLIST_REMOTE_NAME\", LOCAL_FILE.name)\n",
+        "OPENLIST_BASE_URL = \"https://alist.example.com\"  # 例如 https://oplist.example.com\n",
+        "OPENLIST_USERNAME = \"admin\"\n",
+        "OPENLIST_PASSWORD = \"\"  # TODO: 填写密码（不要提交到公开仓库）\n",
+        "REMOTE_DIR = \"/tianyi/test3\"  # 例如 /tianyi/test3\n",
+        "REMOTE_FILENAME = LOCAL_FILE.name  # 或写死：\"xxx.mp4\"\n",
         "VERIFY_TLS = True  # https 自签证书可设 False\n",
         "\n",
         "def alist_login(base_url: str, username: str, password: str) -> str:\n",
@@ -655,10 +654,10 @@
         "    print(\"upload ok:\", json.dumps(res, ensure_ascii=False))\n",
         "\n",
         "# ====== 下载到本地（Colab）======\n",
-        "from google.colab import files\n",
+        "# from google.colab import files\n",
         "\n",
-        "files.download(str(SRT_FILE))\n",
-        "files.download(str(LOCAL_FILE))\n"
+        "# files.download(str(SRT_FILE))\n",
+        "# files.download(str(LOCAL_FILE))\n"
       ]
     },
     {
