--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -124,10 +124,10 @@
         "asr_model_size = large-v2\n",
         "\n",
         "# T4 显存有限，默认使用 600M（更稳）；追求质量可改为 1.3B\n",
-        "translation_model = facebook/nllb-200-distilled-1.3B\n",
+        "translation_model = facebook/nllb-200-1.3B\n",
         "\n",
         "use_gpu = true\n",
-        "beam_size = 3\n",
+        "beam_size = 5\n",
         "\n",
         "[GPU]\n",
         "# 在 GPU 重任务前清理 CUDA 缓存，降低 OOM 概率（略慢）\n",
@@ -513,27 +513,17 @@
         "        \"-movflags\",\n",
         "        \"+faststart\",\n",
         "    ]\n",
+        "    cmd_nvenc = None\n",
+        "    cmd_x264 = None\n",
         "    if use_nvenc:\n",
-        "        cmd += [\n",
+        "        # 注意：部分环境虽然编译了 nvenc，但运行时可能不可用（驱动/权限），因此下面会自动回退到 libx264。\n",
+        "        cmd_nvenc = cmd + [\n",
         "            \"-c:v\",\n",
         "            \"h264_nvenc\",\n",
         "            \"-preset\",\n",
         "            \"p7\",\n",
         "            \"-rc\",\n",
-        "            \"vbr_hq\",\n",
-        "            \"-b:v\",\n",
-        "            f\"{target_k}k\",\n",
-        "            \"-maxrate\",\n",
-        "            f\"{int(target_k * 1.5)}k\",\n",
-        "            \"-bufsize\",\n",
-        "            f\"{int(target_k * 2)}k\",\n",
-        "        ]\n",
-        "    else:\n",
-        "        cmd += [\n",
-        "            \"-c:v\",\n",
-        "            \"libx264\",\n",
-        "            \"-preset\",\n",
-        "            \"slow\",\n",
+        "            \"vbr\",  # 比 vbr_hq 兼容性更好\n",
         "            \"-b:v\",\n",
         "            f\"{target_k}k\",\n",
         "            \"-maxrate\",\n",
@@ -542,11 +532,38 @@
         "            f\"{int(target_k * 2)}k\",\n",
         "            \"-pix_fmt\",\n",
         "            \"yuv420p\",\n",
+        "            str(OUT_PATH),\n",
         "        ]\n",
-        "    cmd.append(str(OUT_PATH))\n",
+        "\n",
+        "    cmd_x264 = cmd + [\n",
+        "        \"-c:v\",\n",
+        "        \"libx264\",\n",
+        "        \"-preset\",\n",
+        "        \"slow\",\n",
+        "        \"-b:v\",\n",
+        "        f\"{target_k}k\",\n",
+        "        \"-maxrate\",\n",
+        "        f\"{int(target_k * 1.5)}k\",\n",
+        "        \"-bufsize\",\n",
+        "        f\"{int(target_k * 2)}k\",\n",
+        "        \"-pix_fmt\",\n",
+        "        \"yuv420p\",\n",
+        "        str(OUT_PATH),\n",
+        "    ]\n",
+        "\n",
+        "    cmd = cmd_nvenc or cmd_x264\n",
         "\n",
         "print(\"Running:\\n \", \" \".join(cmd))\n",
-        "subprocess.run(cmd, check=True)\n",
+        "try:\n",
+        "    subprocess.run(cmd, check=True)\n",
+        "except subprocess.CalledProcessError as e:\n",
+        "    if MODE == \"hard\" and cmd_nvenc is not None:\n",
+        "        print(\"\\nNVENC 合并失败，自动回退到 libx264 重试...\\n\")\n",
+        "        cmd = cmd_x264\n",
+        "        print(\"Running:\\n \", \" \".join(cmd))\n",
+        "        subprocess.run(cmd, check=True)\n",
+        "    else:\n",
+        "        raise\n",
         "print(\"OK:\", OUT_PATH)\n"
       ]
     },
@@ -573,7 +590,7 @@
         "print(\"local video:\", LOCAL_FILE)\n",
         "\n",
         "# ====== OpenList/AList 上传配置（硬编码）======\n",
-        "UPLOAD_TO_OPENLIST = False  # True=上传；False=跳过\n",
+        "UPLOAD_TO_OPENLIST = True  # True=上传；False=跳过\n",
         "OPENLIST_BASE_URL = \"https://alist.example.com\"  # 例如 https://oplist.example.com\n",
         "OPENLIST_USERNAME = \"admin\"\n",
         "OPENLIST_PASSWORD = \"\"  # TODO: 填写密码（不要提交到公开仓库）\n",
