Fix: Demucs chunked separation for long audio

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -578,6 +578,7 @@
         "import json\n",
         "from pathlib import Path\n",
         "from urllib.parse import quote\n",
+        "from google.colab import userdata\n",
         "\n",
         "import requests\n",
         "\n",
@@ -589,12 +590,12 @@
         "print(\"local srt:\", SRT_FILE)\n",
         "print(\"local video:\", LOCAL_FILE)\n",
         "\n",
-        "# ====== OpenList/AList 上传配置（硬编码）======\n",
+        "# ====== OpenList/AList 上传配置（Colab Secrets/userdata）======\n",
         "UPLOAD_TO_OPENLIST = True  # True=上传；False=跳过\n",
-        "OPENLIST_BASE_URL = \"https://alist.example.com\"  # 例如 https://oplist.example.com\n",
-        "OPENLIST_USERNAME = \"admin\"\n",
-        "OPENLIST_PASSWORD = \"\"  # TODO: 填写密码（不要提交到公开仓库）\n",
-        "REMOTE_DIR = \"/tianyi/test3\"  # 例如 /tianyi/test3\n",
+        "OPENLIST_BASE_URL = userdata.get('OPENLIST_BASE_URL')  # 例如 https://oplist.example.com\n",
+        "OPENLIST_USERNAME = userdata.get('OPENLIST_USERNAME')\n",
+        "OPENLIST_PASSWORD = userdata.get('OPENLIST_PASSWORD')\n",
+        "REMOTE_DIR = userdata.get('REMOTE_DIR')  # 例如 /tianyi/test3\n",
         "REMOTE_FILENAME = LOCAL_FILE.name  # 或写死：\"xxx.mp4\"\n",
         "VERIFY_TLS = True  # https 自签证书可设 False\n",
         "\n",
