Colab/Docs: increase ASR chunk length defaults

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -101,9 +101,11 @@
         "from pathlib import Path\n",
         "\n",
         "# 分块识别开关（默认关闭）\n",
+        "# 说明：分块越小，越容易把单词/句子切开；但分块越大，越容易触发服务端 500/OOM。\n",
+        "# 建议从 900s（15分钟）起步，不稳定再降到 600/300。\n",
         "ENABLE_ASR_CHUNKING = False  # True=分块识别（显示进度条/降低长音频500/OOM）\n",
-        "ASR_CHUNK_SEC = 300\n",
-        "ASR_CHUNK_OVERLAP_SEC = 0.5\n",
+        "ASR_CHUNK_SEC = 900\n",
+        "ASR_CHUNK_OVERLAP_SEC = 1.0\n",
         "\n",
         "# 指定 ASR 音频语言（auto=自动检测；填错会变差）\n",
         "# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar\n",
@@ -123,8 +125,8 @@
         "# 如果显存不够/加载太慢，可改：asr_model_size = small\n",
         "asr_model_size = large-v2\n",
         "\n",
-        "# T4 显存有限，默认使用 600M（更稳）；追求质量可改为 1.3B\n",
-        "translation_model = facebook/nllb-200-1.3B\n",
+        "# 翻译模型（不降精度）：默认 1.3B；如需更快可改为 600M\n",
+        "translation_model = facebook/nllb-200-distilled-1.3B\n",
         "\n",
         "use_gpu = true\n",
         "beam_size = 5\n",
