Config: make Demucs chunk_sec configurable

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -107,6 +107,10 @@
         "ASR_CHUNK_SEC = 900\n",
         "ASR_CHUNK_OVERLAP_SEC = 1.0\n",
         "\n",
+        "# Demucs 人声分离分段秒数（仅对超长/超大音频触发；越大越不容易出现边界接缝，但越吃内存）\n",
+        "# 如果仍然 OOM，可降到 600/300；如果视频特别长但内存足够，可升到 3600。\n",
+        "DEMUCS_CHUNK_SEC = 1800\n",
+        "\n",
         "# 指定 ASR 音频语言（auto=自动检测；填错会变差）\n",
         "# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar\n",
         "ASR_LANGUAGE = \"auto\"\n",
@@ -154,6 +158,7 @@
         "vocal_separation_model = htdemucs\n",
         "# 默认用 cuda 加速；如遇 OOM 可改为 cpu\n",
         "vocal_separation_device = cuda\n",
+        "vocal_separation_chunk_sec = {DEMUCS_CHUNK_SEC}\n",
         "\"\"\"\n",
         "\n",
         "Path(\"config.ini\").write_text(config_text, encoding=\"utf-8\")\n",
