Colab: stream OpenList upload to avoid OOM

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -15,6 +15,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "533131a5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 直接把你的直链贴到这里即可\n",
+        "VIDEO_URL = \"https://oplist.mae5.com/d/本地存储/1.mp4?sign=b58L3c5JYGAMNwLcO09asS9CV8aHTlGBXiO3Yi8Pe0Y=:0\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "9a57f1fd",
       "metadata": {},
       "outputs": [],
@@ -87,7 +98,10 @@
         "!python -m pip install demucs\n",
         "\n",
         "# torchaudio 新版本保存音频需要 torchcodec（否则 Demucs 会报错）\n",
-        "!python -m pip install torchcodec\n"
+        "!python -m pip install torchcodec\n",
+        "\n",
+        "# OpenList/AList 大文件上传：requests 默认 multipart 会把文件读进内存，需用 requests-toolbelt 流式上传\n",
+        "!python -m pip install requests-toolbelt\n"
       ]
     },
     {
@@ -113,7 +127,7 @@
         "\n",
         "# 指定 ASR 音频语言（auto=自动检测；填错会变差）\n",
         "# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar\n",
-        "ASR_LANGUAGE = \"auto\"\n",
+        "ASR_LANGUAGE = \"ja\"\n",
         "\n",
         "config_text = f\"\"\"[API]\n",
         "deepseek_api_key =\n",
@@ -306,8 +320,7 @@
       "outputs": [],
       "source": [
         "#@title 7) 下载测试视频（自动使用链接文件名）\n",
-        "# 直接把你的直链贴到这里即可\n",
-        "VIDEO_URL = \"https://oplist.mae5.com/d/本地存储/1.mp4?sign=b58L3c5JYGAMNwLcO09asS9CV8aHTlGBXiO3Yi8Pe0Y=:0\"\n",
+        "\n",
         "OUT_PATH = \"\"  # 留空=使用链接里的文件名\n",
         "FORCE = False  # True=总是重新下载\n",
         "\n",
@@ -642,9 +655,13 @@
         "    }\n",
         "\n",
         "    def _do_put(hdrs: dict):\n",
+        "        # 用 requests-toolbelt 流式 multipart 上传，避免把大文件一次性读进内存\n",
+        "        from requests_toolbelt.multipart.encoder import MultipartEncoder\n",
         "        with local_path.open(\"rb\") as f:\n",
-        "            files = {\"file\": (remote_name, f)}\n",
-        "            return requests.put(url, headers=hdrs, files=files, timeout=3600, verify=VERIFY_TLS)\n",
+        "            encoder = MultipartEncoder(fields={\"file\": (remote_name, f, \"application/octet-stream\")})\n",
+        "            hdrs2 = dict(hdrs)\n",
+        "            hdrs2[\"Content-Type\"] = encoder.content_type\n",
+        "            return requests.put(url, headers=hdrs2, data=encoder, timeout=3600, verify=VERIFY_TLS)\n",
         "\n",
         "    r = _do_put(headers)\n",
         "    if r.status_code in (401, 403) and not str(headers.get(\"Authorization\", \"\")).lower().startswith(\"bearer \"):\n",
